# mxr

./: LICENSE  alembic.ini  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
alembic/: env.py  script.py.mako
alembic/versions/: 11ca08befee1_mxr_drink_table.py  2025_03_14-adding_drinksingredientsassociation_a540c124bbcc.py
mxr/: __main__.py  app.py  common.py  orm.py
mxr/api_v1/: __init__.py  drinks_api.py
tests/: conftest.py  test_code_compliance.py  test_drinks_api.py
tools/: install.py  run.py  run.sh  update.py
